Fix namespace in tasks and templates
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/openshift-gateway-configmap.yaml.j2
+++ b/roles/reportportal/templates/openshift-gateway-configmap.yaml.j2
@@ -1,7 +1,7 @@
 kind: ConfigMap
 metadata:
   name: gateway-config
-  namespace: '{{ meta.namespace }}'
+  namespace: {{ meta.namespace }}
 apiVersion: v1
 data:
   traefik-dynamic-config.yml: |
