--- a/roles/reportportal/templates/rabbitmq-rolebinding.yaml.j2
+++ b/roles/reportportal/templates/rabbitmq-rolebinding.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: rabbitmq
   name: {{ rabbitmq_name }}-endpoint-reader
-  namespace: libvirt-ci
+  namespace: {{ meta.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
