Fix gateway host if app_domain empty
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/openshift-gateway-route.yaml.j2
+++ b/roles/reportportal/templates/openshift-gateway-route.yaml.j2
@@ -4,10 +4,12 @@ metadata:
   labels:
     app: reportportal
   name: reportportal
-  namespace: '{{ meta.namespace }}'
+  namespace: {{ meta.namespace }}
 spec:
 {% if app_domain %}
-  host: 'reportportal-{{ meta.namespace }}.{{ app_domain }}'
+  host: reportportal-{{ meta.namespace }}.{{ app_domain }}
+{% else %}
+  host:
 {% endif %}
   port:
     targetPort: http
