Add extra label for RP services
The new label could be used as selector for ServiceMonitor api.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/analyzer-service.yaml.j2
+++ b/roles/reportportal/templates/analyzer-service.yaml.j2
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   labels:
     app: reportportal
+    component: analyzer
   name: analyzer
   namespace: '{{ meta.namespace }}'
 spec:
