--- a/roles/reportportal/templates/api-service.yaml.j2
+++ b/roles/reportportal/templates/api-service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
     service: api
   labels:
     app: reportportal
+    component: api
   name: api
   namespace: '{{ meta.namespace }}'
 spec:
