--- a/roles/reportportal/templates/index-service.yaml.j2
+++ b/roles/reportportal/templates/index-service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
     service: index
   labels:
     app: reportportal
+    component: index
   name: index
   namespace: '{{ meta.namespace }}'
 spec:
