--- a/roles/reportportal/templates/openshift-gateway-service.yaml.j2
+++ b/roles/reportportal/templates/openshift-gateway-service.yaml.j2
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   labels:
     app: reportportal
+    component: gateway
   name: gateway
   namespace: '{{ meta.namespace }}'
 spec:
