--- a/roles/reportportal/templates/uat-service.yaml.j2
+++ b/roles/reportportal/templates/uat-service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
     service: uat
   labels:
     app: reportportal
+    component: uat
   name: uat
   namespace: '{{ meta.namespace }}'
 spec:
