--- a/roles/reportportal/templates/ui-service.yaml.j2
+++ b/roles/reportportal/templates/ui-service.yaml.j2
@@ -6,6 +6,7 @@ metadata:
     service: ui
   labels:
     app: reportportal
+    component: ui
   name: ui
   namespace: '{{ meta.namespace }}'
 spec:
