Fix missing namespace in templates
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-metrics-service.yaml.j2
+++ b/roles/reportportal/templates/es-metrics-service.yaml.j2
@@ -5,6 +5,7 @@ metadata:
     component: metrics
     app: elasticsearch
   name: elasticsearch-metrics
+  namespace: {{ meta.namespace }}
 spec:
   ports:
   - name: http-metrics
