--- a/roles/reportportal/templates/es-servicemonitor.yaml.j2
+++ b/roles/reportportal/templates/es-servicemonitor.yaml.j2
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: elasticsearch
   name: elasticsearch-metrics
+  namespace: {{ meta.namespace }}
 spec:
   endpoints:
     - port: http-metrics
