--- a/roles/reportportal/templates/pg-servicemonitor.yaml.j2
+++ b/roles/reportportal/templates/pg-servicemonitor.yaml.j2
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: postgresql
   name: postgres-metrics
+  namespace: {{ meta.namespace }}
 spec:
   endpoints:
     - port: metrics
