--- a/roles/reportportal/templates/rabbitmq-servicemonitor.yaml.j2
+++ b/roles/reportportal/templates/rabbitmq-servicemonitor.yaml.j2
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: rabbitmq
   name: rabbitmq-metrics
+  namespace: {{ meta.namespace }}
 spec:
   endpoints:
   - honorLabels: false
