--- a/roles/reportportal/templates/minio-servicemonitor.yaml.j2
+++ b/roles/reportportal/templates/minio-servicemonitor.yaml.j2
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: minio
   name: minio-metrics
+  namespace: {{ meta.namespace }}
 spec:
   endpoints:
     - port: '9000'
