--- a/roles/reportportal/templates/pg-service-metrics.yaml.j2
+++ b/roles/reportportal/templates/pg-service-metrics.yaml.j2
@@ -5,6 +5,7 @@ metadata:
     app: postgresql
     service: metrics
   name: postgresql-metrics
+  namespace: {{ meta.namespace }}
 spec:
   ports:
   - name: metrics
