Update elasticsearch statefulset
Update default image with s3 plugin installed.
Add keystore secret and initContainer to add the keystore secrets.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-statefulset.yaml.j2
+++ b/roles/reportportal/templates/es-statefulset.yaml.j2
@@ -112,6 +112,46 @@ spec:
         volumeMounts:
         - mountPath: /usr/share/elasticsearch/data
           name: elasticsearch-master
+        - mountPath: /usr/share/elasticsearch/config/elasticsearch.keystore
+          name: keystore
+          subPath: elasticsearch.keystore
+      initContainers:
+      - command:
+        - sh
+        - -c
+        - |
+          #!/usr/bin/env bash
+          set -euo pipefail
+
+          elasticsearch-keystore create
+
+          for i in /tmp/keystoreSecrets/*/*; do
+            key=$(basename $i)
+            echo "Adding file $i to keystore key $key"
+            elasticsearch-keystore add-file "$key" "$i"
+          done
+
+          # Add the bootstrap password since otherwise the Elasticsearch entrypoint tries to do this on startup
+          if [ ! -z ${ELASTIC_PASSWORD+x} ]; then
+            echo 'Adding env $ELASTIC_PASSWORD to keystore as key bootstrap.password'
+            echo "$ELASTIC_PASSWORD" | elasticsearch-keystore add -x bootstrap.password
+          fi
+
+          cp -a /usr/share/elasticsearch/config/elasticsearch.keystore /tmp/keystore/
+        image: {{es_image }}
+        name: keystore
+        volumeMounts:
+        - mountPath: /tmp/keystore
+          name: keystore
+        - mountPath: /tmp/keystoreSecrets/s3-access-key
+          name: keystore-s3-access-key
+      volumes:
+      - emptyDir: {}
+        name: keystore
+      - name: keystore-s3-access-key
+        secret:
+          defaultMode: 420
+          secretName: s3-access-key
   updateStrategy:
     type: RollingUpdate
   volumeClaimTemplates:
