Add elasticsearch snapshot cronjob
Add configmap with minio s3 snapshot configs and create cronjob
for run snapshot command.

Also fix the key name in the keystore secret.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-keystore-secret.yaml.j2
+++ b/roles/reportportal/templates/es-keystore-secret.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  accesskey: {{ accesskey | string | b64encode }}
-  secretkey: {{ secretkey | string | b64encode }}
+  s3.client.default.access_key: {{ accesskey | string | b64encode }}
+  s3.client.default.secret_key: {{ secretkey | string | b64encode }}
 kind: Secret
 metadata:
   labels:
