--- a/roles/reportportal/templates/es-snapshot-configmap.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-configmap.yaml.j2
@@ -25,7 +25,7 @@ data:
     fi
 
     minio_host=$(echo {{ mino_endpoint }} |awk -F:// '{print $2}' |awk -F: '{print $1}')
-    minio_port=$(echo {{ mino_endpoint }} |awk -F: '{print $2}' |awk -F: '{print $3}')
+    minio_port=$(echo {{ mino_endpoint }} |awk -F: '{print $3}'
     minio_ip=$(getent hosts $minio_host | awk '{ print $1}')
 
     if [[ -n $ELASTIC_S3_BACKUP_DIR ]] then;
