Fix es snapshot cronjob typo
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: es-s3-snapshot
-  namespace: {{ meta.namesapce }}
+  namespace: {{ meta.namespace }}
 spec:
   schedule: {{ es_backup_schedule }}
   jobTemplate:
