Update es cm and cronjob label
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-configmap.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-configmap.yaml.j2
@@ -38,5 +38,5 @@ kind: ConfigMap
 metadata:
   name: es-snapshot
   labels:
-    app: elasticsearch
+    app: elasticsearch-master
   namespace: {{ meta.namespace }}
