Fix the es cronjob schedule string
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
@@ -6,7 +6,7 @@ metadata:
   name: es-s3-snapshot
   namespace: {{ meta.namespace }}
 spec:
-  schedule: {{ es_backup_schedule }}
+  schedule: "{{ es_backup_schedule }}"
   jobTemplate:
     spec:
       template:
