--- a/roles/reportportal/templates/pg-preinit-configmap.yaml.j2
+++ b/roles/reportportal/templates/pg-preinit-configmap.yaml.j2
@@ -3,11 +3,61 @@ data:
   preinit.sh: |-
     #!/bin/bash
     #
-    # Remove custom "$POSTGRESQL_VOLUME_DIR/.user_scripts_initialized"
 
+    set -o errexit
+    set -o nounset
+    set -o pipefail
     # shellcheck disable=SC1090
     # shellcheck disable=SC1091
 
+    # Load Generic Libraries
+    . /libvalidations.sh
+    . /libpostgresql.sh
+
+
+    ########################
+    # Load archive variables used on PostgreSQL configuration.
+    # Globals:
+    #   RESTIC_*, S3_*, AWS_*, ENABLE_RESTIC_RECOVERY
+    # Arguments:
+    #   None
+    # Returns:
+    #   Series of exports to be used as 'eval' arguments
+    #########################
+    postgresql_archive_restic_env() {
+        default_date="$(date +"%Y-%m-%d 00:00:00")"
+        cat <<"EOF"
+    # S3 settings
+    export RESTIC_BINARY_PATH="${RESTIC_BINARY_PATH:-/bitnami/postgresql/restic}"
+    export RESTIC_RECOVERY_TARGET_TIME="${RESTIC_RECOVERY_TARGET_TIME:-default_date}"
+    export ENABLE_RESTIC_RECOVERY="${ENABLE_RESTIC_RECOVERY:-}"
+    export RESTIC_S3_BUCKET_INIT="${RESTIC_S3_BUCKET_INIT:-}"
+    export RESTIC_PASSWORD="${RESTIC_PASSWORD:-}"
+    export S3_ENDPOINT="${S3_ENDPOINT:-}"
+    export S3_BUCKET_NAME="${S3_BUCKET_NAME:-}"
+    export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID:-}"
+    export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY:-}"
+    EOF
+    }
+
+
+    eval "$(postgresql_archive_restic_env)"
+    if [[ ! -f "${RESTIC_BINARY_PATH}" ]]; then
+        postgresql_info "Download restic client"
+        curl https://raw.githubusercontent.com/waynesun09/reportportal-operator/master/bin/restic_0.9.6_linux_amd64 -o "$RESTIC_BINARY_PATH"
+    fi
+
+    postgresql_info "Update restic client with execute permission"
+    chmod +x "$RESTIC_BINARY_PATH"
+
+    if is_boolean_yes "$ENABLE_RESTIC_RECOVERY"; then
+       cp -f "$POSTGRESQL_BASE_DIR/share/recovery.conf.sample" "$POSTGRESQL_RECOVERY_FILE"
+       chmod 600 "$POSTGRESQL_RECOVERY_FILE"
+       postgresql_set_property "restore_command" "${RESTIC_BINARY_PATH} -r s3:${S3_ENDPOINT}/${S3_BUCKET_NAME} latest --path %f --target %p" "$POSTGRESQL_RECOVERY_FILE"
+       postgresql_set_property "recovery_target_time" "$RESTIC_RECOVERY_TARGET_TIME" "$POSTGRESQL_RECOVERY_FILE"
+    fi
+
+    # Remove custom "$POSTGRESQL_VOLUME_DIR/.user_scripts_initialized"
     if [[ -f "$POSTGRESQL_VOLUME_DIR/.user_scripts_initialized" ]]; then
         rm -f "${POSTGRESQL_VOLUME_DIR}/.user_scripts_initialized"
     fi
