--- a/roles/reportportal/templates/pg-preinit-configmap.yaml.j2
+++ b/roles/reportportal/templates/pg-preinit-configmap.yaml.j2
@@ -33,6 +33,7 @@ data:
     export ENABLE_RESTIC_RECOVERY="${ENABLE_RESTIC_RECOVERY:-}"
     export RESTIC_S3_BUCKET_INIT="${RESTIC_S3_BUCKET_INIT:-}"
     export RESTIC_PASSWORD="${RESTIC_PASSWORD:-}"
+    export RESTIC_SNAPSHOT_ID="${RESTIC_SNAPSHOT_ID:-latest}"
     export S3_ENDPOINT="${S3_ENDPOINT:-}"
     export S3_BUCKET_NAME="${S3_BUCKET_NAME:-}"
     export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID:-}"
@@ -53,7 +54,7 @@ data:
     if is_boolean_yes "$ENABLE_RESTIC_RECOVERY"; then
        cp -f "$POSTGRESQL_BASE_DIR/share/recovery.conf.sample" "$POSTGRESQL_RECOVERY_FILE"
        chmod 600 "$POSTGRESQL_RECOVERY_FILE"
-       postgresql_set_property "restore_command" "${RESTIC_BINARY_PATH} -r s3:${S3_ENDPOINT}/${S3_BUCKET_NAME} latest --path %f --target %p" "$POSTGRESQL_RECOVERY_FILE"
+       postgresql_set_property "restore_command" "${RESTIC_BINARY_PATH} -r s3:${S3_ENDPOINT}/${S3_BUCKET_NAME} "${RESTIC_SNAPSHOT_ID}" --path %f --target %p" "$POSTGRESQL_RECOVERY_FILE"
        postgresql_set_property "recovery_target_time" "$RESTIC_RECOVERY_TARGET_TIME" "$POSTGRESQL_RECOVERY_FILE"
     fi
 
