Add ServiceApiServiceMonitor CRD
Add new CRD, CR and tasks, update CSV with the new CRD.

User need pre-create the RP beaer token secret and specify it when
create new ServiceApiServiceMonitor operand.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/api-servicemonitor.yaml.j2
+++ b/roles/reportportal/templates/api-servicemonitor.yaml.j2
@@ -3,12 +3,14 @@ kind: ServiceMonitor
 metadata:
   labels:
     app: reportportal
+    component: api
   name: api-metrics
+  namespace: '{{ meta.namespace }}'
 spec:
   endpoints:
   - bearerTokenSecret:
-      key: token
-      name: rp-user-auth
+      key: '{{ bearer_token_secret_name }}'
+      name: '{{ bearer_token_secret_key }}'
     port: headless
     path: /prometheus
   selector:
