Fix api servicemonitor secret name
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/api-servicemonitor.yaml.j2
+++ b/roles/reportportal/templates/api-servicemonitor.yaml.j2
@@ -9,8 +9,8 @@ metadata:
 spec:
   endpoints:
   - bearerTokenSecret:
-      key: '{{ bearer_token_secret_name }}'
-      name: '{{ bearer_token_secret_key }}'
+      name: '{{ bearer_token_secret_name }}'
+      key: '{{ bearer_token_secret_key }}'
     port: headless
     path: /prometheus
   selector:
